src/objects/EnrollmentParticipant__c.object
<CustomObject>
    <fields>
        <fullName>Approver1EMail__c</fullName>
        <label>Approver1 EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Baseline_Margin_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate Enrollment Application Gross Margin has changed.</description>
        <label>Baseline Margin Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalculatedIncentive__c</fullName>
        <description>&quot;After hitting save and recalc, display final payment pool X target % for each participant&quot;- confirm if this is EnrollmentPlan__r.EstimatedIncentivePoolEAC__c</description>
        <formula>TargetIncentivePoolAllocated__c *  EnrollmentPlan__r.FinalIncentivePoolAdjusted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_No_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate Enrollment Application Status equals &quot;Closed - No Award&quot;</description>
        <label>Closed No Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAStatusUpdate__c</fullName>
        <label>EAStatusUpdate</label>
        <picklist>
            <picklistValues>
                <fullName>Unenrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EAStatus__c</fullName>
        <description>Associated Enrollment Application Status</description>
        <formula>TEXT(EnrollmentPlan__r.EnrollmentStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeCategory__c</fullName>
        <formula>EmployeeName__r.pse__Salesforce_User__r.Employee_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeIDNumberOld__c</fullName>
        <label>Employee ID NumberOld</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <formula>EmployeeName__r.Person_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The &quot;Person ID&quot; on the related Employee Contact</inlineHelpText>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>PSA Resource, AECOM Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Salesforce_User__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollment Participants</relationshipLabel>
        <relationshipName>Enrollment_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeStatusAlert__c</fullName>
        <description>A hazard icon will display in the &quot;Attn:&quot; column when the participant section is incomplete.  Each application must contain at least one enrolled participant, with all all information fields entered.  The total target % allocated to all participants cannot exceed 60% for the purposes of enrollment.  At the time of payment, 100% of the incentive pool can be allocated.</description>
        <formula>IF(EmployeeName__r.pse__Salesforce_User__r.IsActive, Null,            IMAGE(&quot;/resource/1429552689000/INC_ExclamationMark&quot;, &quot;Alert&quot;, 25, 25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A hazard icon will display in the &quot;Attn:&quot; column when the participant section is incomplete.  Each application must contain at least one enrolled participant, with all all information fields entered.  The total target % allocated to all participants canno</inlineHelpText>
        <label>Attn.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeStatusFlow__c</fullName>
        <label>EmployeeStatusFlow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeStatusNo__c</fullName>
        <description>Used for employee status rollup and alert.</description>
        <formula>If( EmployeeStatusAlert__c =&quot;&quot;, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for employee status rollup and alert.</inlineHelpText>
        <label>EmployeeStatusNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeStatus__c</fullName>
        <formula>If(OR(TEXT(EmployeeName__r.Status__c)=&quot;Employee - Active&quot;,TEXT(EmployeeName__r.Status__c)=&quot;Active&quot;, TEXT(EmployeeName__r.Status__c)=&quot;A&quot;), &quot;Active&quot;,
&quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateonProject__c</fullName>
        <label>End Date on Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentPlan__c</fullName>
        <label>Enrollment Plan</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Enrollment Participants</relationshipLabel>
        <relationshipName>EnrollmentParticipants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EstimatedPayout__c</fullName>
        <description>TargetIncentivePoolAllocated__c *  
CASE( EnrollmentPlan__r.IncentivePlan__r.ContractType__c ,
&quot;Fixed Plan&quot;, EnrollmentPlan__r.MaxIncentivePool__c,
&quot;Time &amp; Materials&quot;,EnrollmentPlan__r.EstimatedIncentivePoolEAC__c
,0
)</description>
        <formula>TargetIncentivePoolAllocated__c * CASE(EnrollmentPlan__r.IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, EnrollmentPlan__r.EstimatedPoolBaseline__c, &quot;Time &amp; Material&quot;, EnrollmentPlan__r.EstimatedPoolBaseline10__c,1)</formula>
        <label>Estimated Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExistedAtEnrollment__c</fullName>
        <label>ExistedAtEnrollment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRJobTitle__c</fullName>
        <formula>EmployeeName__r.Title 

/*HR Job Title is stored on the SalesForce User record so the assumption is that the PSA Contact Record will have this relationship established on the Contact Record*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncentiveProjectName__c</fullName>
        <formula>EnrollmentPlan__r.IncentiveProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeAddress__c</fullName>
        <formula>EmployeeName__r.Other_Street__c 

/*Assumption is that &quot;Other Street&quot; is referred to &quot;Street&quot; on Chris&apos;s excel mapping document*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantCategory__c</fullName>
        <label>Participant Category</label>
        <picklist>
            <picklistValues>
                <fullName>Client Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Leader</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParticipantResources__c</fullName>
        <formula>HYPERLINK(&quot;http://my.aecomnet.com/Intranet/About/Delivery+Excellence/Design+and+Consulting+Services/_participant+resources&quot;, &quot;Participant Resources&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Resources</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantType__c</fullName>
        <label>Participant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incentive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentAdjReason__c</fullName>
        <description>Similar to MA Exception Field.  Force Comment if a payment adjustment is made.  If possible, capture employee number for participant in the comment.</description>
        <inlineHelpText>Enter a brief description of reason for the adjustment.  May include &quot;strong client relationship&quot;, &quot;developed technical solution to XXXX challenge&quot;, &quot;identified opportunity for efficiency and cost savings&quot;</inlineHelpText>
        <label>Payment Adj Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentAdjustments__c</fullName>
        <description>Insert column for manual user entry.  Validation rules, whole numbers only</description>
        <inlineHelpText>Enter value of additional award allocation.  (Do not enter as a percent.)</inlineHelpText>
        <label>Payment Adjustments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <description>Manual entry field for Admin only.  Used to log date of payment to employee</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <formula>EnrollmentPlan__r.ScheduledFinishDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <formula>EnrollmentPlan__r.ProjectStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplyTo__c</fullName>
        <formula>CASE(
      EnrollmentPlan__r.IncentiveProject__r.SuperGeography__c , 
                     &quot;Americas&quot;, &quot;americasdtwincentiveplan@aecom.com&quot;, 
                     &quot;EMEA&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;EMEAI&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;APAC&quot;, &quot;apacdtwincentiveplan@aecom.com&quot;, &quot;&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleTitle__c</fullName>
        <label>Role/Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceUser__c</fullName>
        <formula>EmployeeName__r.pse__Salesforce_User__r.FirstName</formula>
        <label>Salesforce User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateonProjectDDMMYY__c</fullName>
        <formula>IF (
    ISBLANK( StartDateonProject__c ), 
    &quot;NoDate&quot;, 
            (RIGHT(TEXT(StartDateonProject__c),2)&amp;                               
             CASE(
             (Month(StartDateonProject__c)),
              01, &quot;Jan&quot;,
              02, &quot;Feb&quot;,
              03, &quot;Mar&quot;,
              04, &quot;Apr&quot;,
              05, &quot;May&quot;,
              06, &quot;Jun&quot;,
              07, &quot;Jul&quot;,
              08, &quot;Aug&quot;,
              09, &quot;Sep&quot;,
              10, &quot;Oct&quot;,
              11, &quot;Nov&quot;,
              12, &quot;Dec&quot;, &quot;Oops&quot;
              ) &amp;
              MID(TEXT(StartDateonProject__c),3,2)
            )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date on Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateonProject__c</fullName>
        <label>Start Date on Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusFlag__c</fullName>
        <label>StatusFlag</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM1ParticipantKey__c</fullName>
        <externalId>true</externalId>
        <label>TM1 Participant Key</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TargetIncentivePoolAllocated__c</fullName>
        <inlineHelpText>Target % Incentive Pool Allocated</inlineHelpText>
        <label>Target %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unallocated__c</fullName>
        <description>Final Payment</description>
        <formula>EnrollmentPlan__r.FinalIncentivePoolAdjusted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserEMailStored__c</fullName>
        <description>Stores the Participant&apos;s SF User Email Address, used for Workflow Notification purposes</description>
        <inlineHelpText>Stores the Participant&apos;s SF User Email Address, used for Workflow Notification purposes</inlineHelpText>
        <label>UserEMail Stored</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <formula>EmployeeName__r.pse__Salesforce_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserEmail</label>
        <type>Text</type>
    </fields>
    <label>Enrollment Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>EmployeeName__c</columns>
        <columns>EAStatusUpdate__c</columns>
        <columns>EnrollmentPlan__c</columns>
        <columns>EAStatus__c</columns>
        <columns>EmployeeStatusFlow__c</columns>
        <columns>EmployeeStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Participants</pluralLabel>
    <recordTypes>
        <fullName>Edit_Participant</fullName>
        <active>true</active>
        <label>Edit Participant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Participant</fullName>
        <active>true</active>
        <label>Read Only Participant</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_Percent_Compare_to_Enrollment</fullName>
        <active>true</active>
        <description>The participant&apos;s allocation percent must be equal to or greater than the Incentive Plan</description>
        <errorConditionFormula>TargetIncentivePoolAllocated__c   
&lt;
EnrollmentPlan__r.IncentivePlan__r.MinAllocationPer__c</errorConditionFormula>
        <errorMessage>The Participant Allocation must be equal to or greater than the Incentive Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_on_Project_Compare_to_Project</fullName>
        <active>true</active>
        <description>End Date on Project cannot be before Project Start Date or after Project End Date</description>
        <errorConditionFormula>OR
(
 EndDateonProject__c  &lt; ProjectStartDate__c,
 EndDateonProject__c  &gt; ProjectEndDate__c 
)</errorConditionFormula>
        <errorDisplayField>EndDateonProject__c</errorDisplayField>
        <errorMessage>End Date on Project cannot be before Project Start Date or after Project End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Participant_Payout_Amount</fullName>
        <active>false</active>
        <description>The participant&apos;s estimated payout is below the incentive plan template guideline for the minimum amount</description>
        <errorConditionFormula>EstimatedPayout__c  &lt;  EnrollmentPlan__r.IncentivePlan__r.MinAllocationAmount__c</errorConditionFormula>
        <errorDisplayField>TargetIncentivePoolAllocated__c</errorDisplayField>
        <errorMessage>The participant&apos;s estimated payout is below the incentive plan template guideline for the minimum amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pmt_Adj_Reason_Required</fullName>
        <active>false</active>
        <description>If there is a payment adjustment entered, there must be a payment adjustment reason supplied.</description>
        <errorConditionFormula>AND ( 
      PaymentAdjustments__c &lt;&gt;0,
      ISBLANK(PaymentAdjReason__c)
     )</errorConditionFormula>
        <errorDisplayField>PaymentAdjReason__c</errorDisplayField>
        <errorMessage>If there is a payment adjustment entered, there must be a payment adjustment reason supplied.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_on_Project_Compare_to_Project</fullName>
        <active>false</active>
        <description>Start Date on Project cannot be before Project Start Date or after Project End Date</description>
        <errorConditionFormula>OR
(
StartDateonProject__c  &lt; ProjectStartDate__c,
 StartDateonProject__c &gt; ProjectEndDate__c 
)</errorConditionFormula>
        <errorDisplayField>StartDateonProject__c</errorDisplayField>
        <errorMessage>Start Date on Project cannot be before Project Start Date or after Project End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Percent_Less_Than_or_Equal_Zero</fullName>
        <active>false</active>
        <description>numeric and ≠0.  Positive whole numbers only.</description>
        <errorConditionFormula>TargetIncentivePoolAllocated__c &lt;= 0.0</errorConditionFormula>
        <errorDisplayField>TargetIncentivePoolAllocated__c</errorDisplayField>
        <errorMessage>The Target Percentage can not be less than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_percent_cannot_exceed_100</fullName>
        <active>true</active>
        <description>The target percentage cannot exceed 100%</description>
        <errorConditionFormula>TargetIncentivePoolAllocated__c &gt;1.00</errorConditionFormula>
        <errorDisplayField>TargetIncentivePoolAllocated__c</errorDisplayField>
        <errorMessage>The target percentage cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>